--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "apexcharts": "^3.33.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "v-money": "^0.8.1",
     "v-offline": "^2.3.0",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^2.6.1",
     "webpack": "^4.46.0"
   },
