--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "apexcharts": "^3.33.0",
+    "chart.js": "^3.7.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "v-money": "^0.8.1",
     "v-offline": "^2.3.0",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
+    "vue-chartjs": "^4.1.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue-the-mask": "^0.11.1",
